--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.0.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "chai": "^4.3.4",
+    "deep-equal-in-any-order": "^1.1.10",
+    "mocha": "^9.0.3",
+    "mock-fs": "^5.0.0"
+  }
 }
